<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_height="200pt"
    android:layout_width="120pt"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt"
        android:layout_marginTop="15pt"
        android:layout_marginBottom="15pt"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/username"
            />
        <EditText
            android:inputType="text"
            android:id="@+id/etFirstName"
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/FirstName"/>

        <EditText
            android:inputType="text"
            android:id="@+id/etLastName"
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/LastName"/>

        <EditText
            android:inputType="phone"
            android:id="@+id/etPhone"
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/phone"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/etPassword"
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/password"
            />
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:shadowColor="@color/black"
            android:text="@string/signIn"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>